Pos Stunde 19.12.2022 soesia18

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.at.kaindorf.springburger=debug
+logging.level.employee=debug
 logging.level.org.springframework=info
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/employeedb
